21 - Design Patterns and Best Practices Model added
